# hsdfmpm

./: README.md  TODO.md  conf.py  index.rst  pyproject.toml
examples/: data_flow.ipynb  food_coloring_validation.ipynb  lut_self_validation.ipynb  shift.ipynb  using_mpm_objects.ipynb  validating_phasors.ipynb
src/hsdfmpm/: fit.py  registration.py  utils.py
src/hsdfmpm/data/: transfer_function.csv
src/hsdfmpm/hsdfm/: __init__.py  fit.py  hsdfm.py  utils.py
src/hsdfmpm/hsdfm/contrib/: __init__.py  mie.py
src/hsdfmpm/mpm/: __init__.py  mpm.py  sdt.py  utils.py
src/hsdfmpm/mpm/af/: __init__.py  af.py  utils.py
src/hsdfmpm/mpm/flim/: __init__.py  flim.py  utils.py
tests/__test_utils__/: __init__.py  __test_utils__.py
tests/hsdfmpm/: test_utils.py
tests/hsdfmpm/hsdfm/: test_fit.py  test_hsdfm.py  test_utils.py  test_utils_hsdfm.py
tests/hsdfmpm/hsdfm/contrib/: test_mie.py
tests/hsdfmpm/mpm/: test_utils_mpm.py
tests/hsdfmpm/mpm/af/: test_af.py
tests/hsdfmpm/mpm/flim/: test_flim.py
