[project]
name = "hsdfmpm"
version = "0.0.0"
description = "Simplifying image processing through robust image classes tooled specifically for what you need."
authors = [
    {name = "jiversivers",email = "iversjesse@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.1,<3.0.0)",
    "scipy (>=1.16.0,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "photon-canon (>=2.1.1,<3.0.0)",
    "pywavelets (>=1.8.0,<2.0.0)",
    "setuptools (>=80.9.0,<81.0.0)"
]

[tool.poetry.group.docs.dependencies]
sphinx = "^8.2.3"
sphinx-autodoc-typehints = "^3.2.0"
furo = "^2024.8.6"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
coverage = "^7.9.1"
ruff = "^0.12.1"
myst-parser = "^4.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
